--- a/pom.xml
+++ b/pom.xml
@@ -172,10 +172,10 @@
 
     <licenses>
         <license>
-            <name>GNU General Public License v3.0</name>
-            <url>http://www.gnu.org/licenses/agpl-3.0.html</url>
+            <name>Apache license 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
             <distribution>repo</distribution>
-            <comments>A socket manager</comments>
+            <comments>A common utils jar for more than redis elasticsearch http</comments>
         </license>
     </licenses>
 
@@ -188,21 +188,21 @@
     </developers>
 
     <scm>
-        <connection>scm:git:https://github.com/carolcoral/CommonUtils.git</connection>
-        <developerConnection>scm:git:https://github.com/carolcoral/CommonUtils.git</developerConnection>
-        <url>https://github.com/carolcoral</url>
+        <connection>scm:git:https://github.com/carolcoral/CommonUtil.git</connection>
+        <developerConnection>scm:git:https://github.com/carolcoral/CommonUtil.git</developerConnection>
+        <url>https://github.com/carolcoral/CommonUtil</url>
         <tag>v${project.version}</tag>
     </scm>
 
     <distributionManagement>
         <snapshotRepository>
-            <id>ossrh</id>
+            <id>nexus-releases</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
         <repository>
-            <id>ossrh</id>
+            <id>nexus-releases</id>
             <name>Maven Central Staging Repository</name>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven3/</url>
         </repository>
     </distributionManagement>
 
