new info for use it

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>site.cnkj</groupId>
     <artifactId>CommonUtil</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <version>1.0</version>
 
     <parent>
@@ -145,74 +145,50 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.5.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <!--配置生成Javadoc包-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <!--<version>2.10.3</version>-->
+                <version>2.10.4</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <aggregate>true</aggregate>
+                    <charset>UTF-8</charset>
+                    <docencoding>UTF-8</docencoding>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
                         <goals>
                             <goal>jar</goal>
                         </goals>
+                        <configuration>
+                            <additionalparam>-Xdoclint:none</additionalparam>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
+            <!--配置生成源码包-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
                         <goals>
-                            <goal>jar-no-fork</goal>
+                            <goal>jar</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
-
-    <!--<licenses>-->
-        <!--<license>-->
-            <!--<name>Apache license 2.0</name>-->
-            <!--<url>https://www.apache.org/licenses/LICENSE-2.0</url>-->
-            <!--<distribution>repo</distribution>-->
-            <!--<comments>A common utils jar for more than redis elasticsearch http</comments>-->
-        <!--</license>-->
-    <!--</licenses>-->
-
-    <!--<developers>-->
-        <!--<developer>-->
-            <!--<name>liuxuewen</name>-->
-            <!--<url>https://github.com/carolcoral</url>-->
-            <!--<email>lxw@cnkj.site</email>-->
-        <!--</developer>-->
-    <!--</developers>-->
-
-    <!--<scm>-->
-        <!--<connection>scm:git:https://github.com/carolcoral/CommonUtil.git</connection>-->
-        <!--<developerConnection>scm:git:https://github.com/carolcoral/CommonUtil.git</developerConnection>-->
-        <!--<url>https://github.com/carolcoral/CommonUtil</url>-->
-        <!--<tag>v${project.version}</tag>-->
-    <!--</scm>-->
-
-    <!--<distributionManagement>-->
-        <!--<snapshotRepository>-->
-            <!--<id>nexus-releases</id>-->
-            <!--<url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
-        <!--</snapshotRepository>-->
-        <!--<repository>-->
-            <!--<id>nexus-releases</id>-->
-            <!--<name>Maven Central Staging Repository</name>-->
-            <!--<url>https://oss.sonatype.org/service/local/staging/deploy/maven3/</url>-->
-        <!--</repository>-->
-    <!--</distributionManagement>-->
 
 </project>
